--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,6 +8,7 @@
       <br>
       Thoughts: <%= review.thoughts %>
       <br>
+      <%= link_to "Edit Review", restaurant_review_path(restaurant) %>
     <% end %>
     <br>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
